tests/errors/surf_lex_11.ki
# LEXER: a stray '@' character that is not part of any token
var x = 1 @ 2